--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/mentorbus-frontend/"></script>
+    <script type="module" src="/mentorbus-frontend/src/main.tsx"></script>
   </body>
 </html>
