--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
     <title>Vite + React + TS</title>
+    <script
+      src="https://t1.kakaocdn.net/kakao_js_sdk/${VERSION}/kakao.min.js"
+      integrity="${INTEGRITY_VALUE}"
+      crossorigin="anonymous"
+    ></script>
+    <script>
+      // SDK를 초기화 합니다. 사용할 앱의 JavaScript 키를 설정해야 합니다.
+      Kakao.init("0d42c352b347bf67c79ce3acd8eab966");
 
+      // SDK 초기화 여부를 판단합니다.
+      console.log(Kakao.isInitialized());
+    </script>
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
       // https://github.com/rafrex/spa-github-pages
