--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
 
       ChannelIO("boot", {
         pluginKey: "b023d719-4129-4969-a313-a1d801484a74",
+        customLauncherSelector: ".custom-button-1, #custom-button-2",
+        hideChannelButtonOnBoot: true,
       });
     </script>
   </head>
