--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/Logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
-    <title>Vite + React + TS</title>
+    <title>멘토버스 (대학생과 청소년을 메타버스로 잇다)</title>
 
     <script>
       // SDK를 초기화 합니다. 사용할 앱의 JavaScript 키를 설정해야 합니다.
