initial commit (애플 로그인 테스트 위한 커밋

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       console.log(Kakao.isInitialized());
     </script>
 
+    <script src="https://appleid.cdn-apple.com/appleauth/static/jsapi/appleid/1/en_US/appleid.auth.js"></script>
+
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
       // https://github.com/rafrex/spa-github-pages
